@@ -51,6 +51,14 @@ In Constrexpr_ops:
   interpreting "(x y z:_)" as "(x:_) (y:_) (z:_)" while the second
   ones were preserving the original sharing of the type.
 
+Location handling has been reworked, Loc.ghost has been removed in
+favor of an option type. All objects carrying a source code location
+have been switched to `'a Loc.located == Loc.t option * a'`, which
+should be treated as private (that is, ok to match against, but
+forbidden to manually build), and is mandatory to use for objects with
+location. This policy has been implemented in the whole code base,
+including all the ASTs for vernacular, gallina, and tactics.
+
 ** Ltac API **
 
 Many Ltac specific API has been moved in its own ltac/ folder. Amongst other
